--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,9 +9,9 @@
     <title>EatHub</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="css/starter-template.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/starter-template.css" rel="stylesheet">
 
     <body>
       <header>
@@ -23,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#"><img class="navbar-logo" src="image/logo_big.png" /></a>
+              <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#"><img class="navbar-logo" src="{{ STATIC_URL }}image/logo_big.png" /></a>
             </nav>
             <nav class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
@@ -48,8 +49,12 @@
                   </div>
                 </li>
                 <li class="divider-vertical"></li>
+                {% if user.is_authenticated %}
                 <li class="btn-group">
-                  <a class="profile-image dropdown-toggle" data-toggle="dropdown" href="#"><img src="image/profile.jpg"/></a>
+                  <p>
+                    {% trans "Hello" %}, {{ username }}.
+                  </p>
+                  <a class="profile-image dropdown-toggle" data-toggle="dropdown" href="#"><img src="{{ STATIC_URL }}image/profile.jpg"/></a>
                   <ul class="dropdown-menu">
                     <li>
                       <a href="#">Profile</a>
@@ -71,6 +76,28 @@
                     <span class="glyphicon glyphicon-plus"></span>Add
                   </button>
                 </li>
+                {% else %}
+                <li>
+                  <form class="navbar-form form-inline" role="form" action="/login/" method="post">
+                    {% csrf_token %}
+                    {% csrf_token %}
+                    {% if next %}
+                    <input type="hidden" name="next" value="{{ next }}" />
+                    {% endif %}
+                    <div class="form-group">
+                      <label class="sr-only" for="exampleInputEmail2">Username</label>
+                      <input type="username" name="username" class="form-control" id="username" placeholder="Enter email" required>
+                    </div>
+                    <div class="form-group">
+                      <label class="sr-only" for="exampleInputPassword2">Password</label>
+                      <input type="password" name="password" class="form-control" id="password" placeholder="Password" required>
+                    </div>
+                    <button type="submit" class="btn btn-default">
+                      Sign in
+                    </button>
+                  </form>
+                </li>
+                {% endif %}
               </ul>
             </nav>
           </div>
@@ -79,14 +106,7 @@
       <main>
         <div class="container">
 
-          <div class="starter-template">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">
-              Use this document as a way to quickly start any new project.
-              <br>
-              All you get is this text and a mostly barebones HTML document.
-            </p>
-          </div>
+          {% block container %}{% endblock %}
 
         </div><!-- /.container -->
       </main>
@@ -94,8 +114,8 @@
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
+        <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
       </footer>
     </body>
 </html>
