--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
       {% if next %}
       <input type="hidden" name="next" value="{{ next }}" />
       {% endif %}
-      <h2 class="form-signin-heading">Please sign in</h2>
+      <h2 class="form-signin-heading">{% trans "Please sign in" %}</h2>
     </div>
     <div class="form-group">
       <input class="form-control" type="text" id="username" name="username"  placeholder="Username" required autofocus>
@@ -39,10 +39,10 @@
     <div class="form-group">
       <label class="checkbox">
         <input type="checkbox" value="remember-me">
-        Remember me </label>
+        {% trans "Remember me" %} </label>
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">
-      Sign in
+      {% trans "Sign in" %}
     </button>
   </form>
 </div>
