--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -71,6 +71,20 @@
                            value="{{ form.display_name.value | default_if_none:'' }}">
                 </div>
             </div>
+
+            <div class="form-group">
+                <label for="id_{{ form.main_language.name }}"
+                       class="col-sm-2 control-label">{{ form.main_language.label }}</label>
+
+                <div class="col-sm-3">
+                    <select class="form-control"
+                            id="id_{{ form.main_language.name }}" name="{{ form.main_language.name }}">
+                        {% for choice in form.main_language.field.choices %}
+                            <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
         </fieldset>
 
         <div class="form-group">
