Completado mockup del formulario de nuevo usuario
- Añadidos más campos al formulario de registro de usuario.
- Personalizados los colores de los sliders de sabores.
- Añadida librería bootstrap-select al proyecto: https://github.com/silviomoreto/bootstrap-select

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -11,8 +11,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'webapp/css/bootstrap.min.css' %}" rel="stylesheet">
-
     <link href="{% static 'webapp/css/starter-template.css' %}" rel="stylesheet">
+
+    {% block custom_css %}{% endblock %}
 
 <body>
 <header>
@@ -123,8 +124,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ STATIC_URL }}webapp/js/jquery.min.js"></script>
-    <script src="{{ STATIC_URL }}webapp/js/bootstrap.min.js"></script>
+    <script src="{% static 'webapp/js/jquery.min.js' %}"></script>
+    <script src="{% static 'webapp/js/bootstrap.min.js' %}"></script>
+    {% block custom_js %} {% endblock %}
 </footer>
 </body>
 </html>
