--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -214,7 +214,7 @@
         </div>
 
         <!-- Avatar -->
-        <div class="form-group">
+        {% comment %}<div class="form-group">
             <label for="id_" class="col-sm-2 control-label">Profile picture</label>
 
             <!-- TODO alternativas para el estilo:
@@ -224,7 +224,7 @@
             <div class="col-sm-3">
                 <input type="file" accept="image/*" class="form-control" name="avatar" id="id_" value="">
             </div>
-        </div>
+        </div>{% endcomment %}
 
     </fieldset>
 
