--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="image/favicon.ico">
+    <link rel="shortcut icon" href="../image/favicon.ico">
 
     <title>EatHub</title>
 
